Added flipclock timer, updated javascript & removed minor issues, updates all the styles to remove duplicates & extras, updated all the icons to be svgs/pngs instead of font-awesome, removed error from multistep form, updated all the pages according to common CRO requests

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -17,12 +17,13 @@
 @import 'home';
 @import 'button';
 @import 'form';
+@import 'checklist';
 @import 'animation';
 @import 'accordion';
-@import 'table';
-@import 'checklist';
-@import 'countdown-timer';
 @import 'steps';
+@import 'table';
+@import 'countdown-timer';
+@import 'flipclock-timer';
 
 // Additional Pages
 // @import 'ebook-page';
