--- a/assets/src/scss/form.scss
+++ b/assets/src/scss/form.scss
@@ -12,7 +12,7 @@ form {
         border-radius: 5px;
         font-size: 2rem;
         line-height: 1;
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
             padding: 20px 15px 20px 70px;
         }
         &:-internal-autofill-selected {
@@ -35,53 +35,35 @@ form {
         width: 100%;
         margin-bottom: 0;
         line-height: 1;
-        &.error {
-            display: block;
-            margin-bottom: 20px;
-            margin-top: -10px;
-            color: red;
-            font-size: 1.9rem;
-        }
         .icon {
             position: absolute;
             top: 20px;
             left: 15px;
-            background-size: 80%;
             width: 25px;
             height: 25px;
             z-index: 999;
-            margin: auto;
-            background-repeat: no-repeat;
-            background-position: center center;
-            i {
-                font-family: 'Font Awesome 5 Free';
-                font-size: 25px;
-                line-height: 1;
-                font-style: normal;
-                color: $primary;
-            }
-            @include media-breakpoint-up(sm) {
+
+            @include media-breakpoint-up(md) {
                 left: 25px;
             }
-            // &.icon-name {
-            //     background-image: url('../../../assets/prod/images/icon-username.png');
-            // }
-            // &.icon-email {
-            //     background-image: url('../../../assets/prod/images/icon-email.png');
-            // }
-            // &.icon-phone {
-            //     background-image: url('../../../assets/prod/images/icon-phone.png');
-            // }
-            // &.icon-pain {
-            //     background-image: url('../../../assets/prod/images/icon-postcode.png');
-            // }
-            // &.icon-message {
-            //     background-image: url('../../../assets/prod/images/icon-message.png');
-            // }
         }
     }
-}
 
-.form-group {
-    width: 100%;
+    label.error,
+    .field-error {
+        display: block;
+        margin-bottom: 20px;
+        margin-top: -10px;
+        color: red;
+        font-size: 1.9rem;
+    }
+    .form-messages {
+        text-align: center;
+        &.success {
+            color: green;
+        }
+        &.error {
+            color: red;
+        }
+    }
 }
