--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -63,20 +63,13 @@ section {
     iframe,
     object,
     embed,
+    img.poster,
     .overlay {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-    }
-
-	img{
-		width: 100%;
-	}
-
-    .overlay{
-        z-index: 4;
     }
 
 	.play-button {
@@ -99,25 +92,18 @@ section {
 		&:focus {
 			outline: 0;
 		}
-
-		img {
-			width: 100%;
-		}
-	}
-
-	iframe {
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 3;
 	}
 }
 
+img {
+    width: 100%;
+}
 .max-width-image {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
+    @include media-breakpoint-up(md) {
+        max-width: 400px;
+    }
     @include media-breakpoint-up(lg) {
         max-width: 100%;
     }
@@ -133,5 +119,5 @@ section {
     }
     &-secondary {
         color: $secondary;
-    }
+	}
 }
