--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -1,24 +1,15 @@
 header {
-
     padding: 15px;
     background-color: transparent;
-    
     &.scrolled {
         box-shadow: -3px -3px 6px 8px rgba(0,0,0,.05);
         background-color: $headerbg;
-        transition: background-color 0.5s ease-in-out;
+        transition: 0.2s ease-in-out;
     }
-
-    // First section extra padding to accommodate header
-    + section {
-        padding-top: $headerheight;
-    }
-
 }
 
 .header-logo img {
-    transition: filter 0.2s ease-in-out, width 0.2s ease-in-out;
-
+    transition: 0.2s ease-in-out;
     // Inverts the logo colour. You could use the filter options to modify a transparent png logo for the different colour header bg.
     // filter: invert(1);
 
@@ -30,8 +21,7 @@ header {
         width: $header-starting-width;
     }
     .scrolled & {
-        filter: none;
-        
+        // filter: none;
         // Turn on the header resize on desktop
         @include media-breakpoint-up(md) {
             width: $header-scrolled-width;
@@ -59,5 +49,4 @@ header {
         font-style: normal;
         font-weight: bold;
     }
-
 } 
