--- a/assets/src/scss/multi-step-form.scss
+++ b/assets/src/scss/multi-step-form.scss
@@ -17,11 +17,11 @@
 			position: relative;
 			z-index: 2;
 			display: block;
-			width: 2rem;
+			width: 5rem;
 			margin: 0 auto;
 			border-radius: 50%;
-			font-size: 1rem;
-			line-height: 2rem;
+			font-size: 2rem;
+			line-height: 5rem;
 			font-weight: 600;
 			color: #676767;
 			background: #f3f3f3;
@@ -35,7 +35,7 @@
 			background: #f3f3f3;
 			position: absolute;
 			left: -50%;
-			top: .8rem;
+			top: 2.5rem;
 			z-index: 1; /*put it behind the numbers*/
 		}
 
