Added popup section

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'countdown-timer';
 @import 'flipclock-timer';
 @import 'product';
+@import 'popup';
 
 // Additional Pages
 // @import 'ebook-page';
