font & svg references to match svg update

--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -3,16 +3,16 @@
 // --------------------
 @font-face {
     font-family: 'Averta-Regular';
-    src: url('../../fonts/Averta-Regular.woff2') format('woff2'),
-    url('../../fonts/Averta-Regular.woff') format('woff');
+    src: url('../fonts/Averta-Regular.woff2') format('woff2'),
+    url('../fonts/Averta-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Averta-Bold';
-    src: url('../../fonts/Averta-Regular.woff2') format('woff2'),
-    url('../../fonts/Averta-Regular.woff') format('woff');
+    src: url('../fonts/Averta-Regular.woff2') format('woff2'),
+    url('../fonts/Averta-Regular.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
