--- a/assets/src/scss/swiper-slider.scss
+++ b/assets/src/scss/swiper-slider.scss
@@ -1,5 +1,5 @@
-.swiper-container {
-	width: 100%;
+.swiper {
+	
 	&.mobile {
 		@include media-breakpoint-up(lg) {
 			pointer-events: none;
@@ -82,13 +82,13 @@
 	.swiper-button-prev {
 		left: 0px;
 		@include media-breakpoint-up(md) {
-			left: 10px;
+			left: 3rem;
 		}
 	}
 	.swiper-button-next {
 		right: 0px;
 		@include media-breakpoint-up(md) {
-			right: 10px;
+			right: 3rem;
 		}
 	}
 
