Init (fonts and style sheets)

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -27,6 +27,19 @@
 @import 'flipclock-timer';
 @import 'product';
 @import 'popup';
+@import 'icon_blocks';
+@import 'intro_section';
+@import 'consent_order_section';
+@import 'five_reasons';
+@import 'partners';
+@import 'img_text_section';
+@import 'text_img_section';
+@import 'four_step_section';
+@import 'guarantee_section';
+@import 'reviews_section';
+@import 'rapid_consent';
+@import 'footer_form';
+
 
 // Additional Pages
 // @import 'ebook-page';
