--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -1,24 +1,43 @@
 // --------------------
 // Include Fonts Here
 // --------------------
+
 @font-face {
-    font-family: 'Averta';
-    src: url('../fonts/Averta-Regular.woff2') format('woff2'),
-    url('../fonts/Averta-Regular.woff') format('woff');
-    font-weight: normal;
+    font-family: 'Gilroy-Bold';
+    src: url('../fonts/Gilroy-Bold.woff2') format('woff2'),
+    url('../fonts/Gilroy-Bold.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Inter-Regular';
+    src: url('../fonts/Inter-Regular.woff2') format('woff2'),
+    url('../fonts/Inter-Regular.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Averta';
-    src: url('../fonts/Averta-Bold.woff2') format('woff2'),
-    url('../fonts/Averta-Bold.woff') format('woff');
-    font-weight: bold;
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-400.woff2') format('woff2'),
+    url('../fonts/Roboto-400.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
 
-$headings-font: 'Averta', sans-serif;
-$body-font: 'Averta', sans-serif;
+@font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
+    url('../fonts/Roboto-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+
+$headings-font: 'Inter', sans-serif;
+$body-font: 'Roboto', sans-serif;
 
 // --------------------
 //  Include Basic Typography
@@ -42,7 +61,12 @@ html, body {
 }
 
 p {
-    margin-bottom: 1.6rem;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 175%;
+    color: #192E50;
 }
 
 // Headline padding
@@ -64,8 +88,16 @@ h1, .h1 {
 }
 
 h2, .h2 {
-    font-size: 4.6rem;  //Laptop: 46px, Ipads: 41.4px, Mobiles: 36.8px
+    // font-size: 4.6rem;  //Laptop: 46px, Ipads: 41.4px, Mobiles: 36.8px
     padding-top: 3rem;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 117.3%;
+    letter-spacing: -0.04em;
+    color: #192E50;
+
     // &::before {
     //     content: '';
     //     position: absolute;
@@ -86,15 +118,33 @@ h2, .h2 {
 }
 
 h3, .h3 {
-    font-size: 3rem;  //Laptop: 30px, Ipads: 27px, Mobiles: 24px
+    // font-size: 3rem;  //Laptop: 30px, Ipads: 27px, Mobiles: 24px
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3.6rem;
+    line-height: 150%;
+    color: #95BE3F;
 }
 
 h4, .h4 {
-    font-size: 2.4rem;  //Laptop: 24px, Ipads: 21.6px, Mobiles: 19.2px
+    // font-size: 2.4rem;  //Laptop: 24px, Ipads: 21.6px, Mobiles: 19.2px
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 150%;
+    color: #95BE3F;
 }
 
 h5, .h5 {
-    font-size: 2rem;  //Laptop: 20px, Ipads: 18px, Mobiles: 16px
+    // font-size: 2rem;  //Laptop: 20px, Ipads: 18px, Mobiles: 16px
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 150%;
+    color: #192E50;
 }
 
 h6, .h6 {
@@ -107,7 +157,13 @@ strong {
 
 // Hero Specific Font Sizes
 .eyebrow {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.06em;
     text-transform: uppercase;
+    color: #95BE3F;
 }
 
 .subheadline {
