--- a/assets/src/scss/icon_blocks.scss
+++ b/assets/src/scss/icon_blocks.scss
@@ -1,3 +1,71 @@
-.icon_blocks{
+
+.icon-blocks{
+    margin-left: auto;
+    margin-right: auto;
+    overflow: unset;
+
+    // Container max width replacement 
+    @include media-breakpoint-up(md) {
+        max-width: 800px;
+    }
+    @include media-breakpoint-up(lg) {
+        max-width: 1000px;
+    }
+    @include media-breakpoint-up(xl) {
+        max-width: 1230px;
+    }
     
+    .top-logos{
+        position: relative;
+        margin: -90px 20px 0 20px;
+
+        @include media-breakpoint-up(md) {
+            margin: -138px 0 0 0;
+        }
+        @include media-breakpoint-up(lg) {
+            margin: -185px 0 0 0;
+        }
+        ul{
+            padding: 20px 30px;
+            @include media-breakpoint-up(md) {
+                padding: 30px 50px;
+            }
+
+            list-style: none;
+            background: $white;
+            box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.05);
+            display: flex;
+            flex-wrap: wrap;
+            li{
+                align-items: center !important;
+                display: flex;
+                flex: 100%;
+                padding: 10px 0 10px 0;
+                @include media-breakpoint-up(md) {
+                    flex: 25%;
+                }
+            }
+            .icon{
+                width: 44px;
+                margin-right: 15px;
+
+                @include media-breakpoint-up(md) {
+                    width: 50px;
+                    margin-right: 20px;
+                }
+            }
+            .text{
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 500;
+                color: #192E50;
+                font-size: 15.0297px;
+                line-height: 18px;
+                
+                @include media-breakpoint-up(md) {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
 }
