--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -3,8 +3,8 @@
 //---------------------
 
 // Colors
-$body-color				: #000000;
-$primary        		: #42c7b3;
+$body-color				: #192E50;
+$primary        		: #95BE3F;
 $secondary      		: #333;
 // $success:       $green;
 // $info:          $cyan;
@@ -25,7 +25,7 @@ $bg-table-active-color 	: #42c7b3;
 // Slider
 $slider-title-color 	: #ffffff;
 $slick-dot-color 		: #ffffff;
-$slick-active-dot-color : #42c7b3;
+$slick-active-dot-color : #95BE3F;
 
 // Grid settings
 $grid-gutter-width		: 3rem !default;
