--- a/assets/src/scss/icon_blocks.scss
+++ b/assets/src/scss/icon_blocks.scss
@@ -68,4 +68,34 @@
             }
         }
     }
+    .intro-section{
+        padding-top: 40px;
+        @include media-breakpoint-up(md) {
+            padding-top: 100px;
+        }
+        .profile-wrapper{
+            position: relative;
+            max-width: 345px;
+            .sig-wrap{
+                margin: -45px 20px 0 20px;
+                position: relative;
+                background: #FFFFFF;
+                box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.05);
+            
+                img{
+                    padding: 5px 50px;
+                }
+                p{
+                    font-family: 'Gilroy-Bold';
+                    font-size: 15.4137px;
+                    line-height: 170.5%;
+                    color: #9BC24A;
+                    padding-bottom: 5px;
+                }
+            }
+        }
+    }
+    .copy{
+        padding: 40px;
+    }
 }
