--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -28,6 +28,14 @@
 }
 
 @font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-400.woff2') format('woff2'),
+    url('../fonts/Roboto-400.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'Roboto-Bold';
     src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
     url('../fonts/Roboto-Bold.woff') format('woff');
@@ -172,7 +180,7 @@ strong {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #95BE3F;
-    margin-top: 25px;
+    margin-top: 35px;
     @include media-breakpoint-up(md) {
         font-size: 18px;
     }
