--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -5,14 +5,17 @@
 
 // Generic Section Padding - adds padding to each section - most of your sections should use this - override for special cases
 section {
-    padding: 60px 0px;
+    // padding: 60px 0px;
+    padding: 40px 0px;
     position: relative;
     overflow: hidden;
     @include media-breakpoint-up(md) {
-        padding: 80px 0px;
+        // padding: 80px 0px;
+        padding: 60px 0px;
     }
     @include media-breakpoint-up(lg) {
-        padding: 120px 0px;
+        // padding: 120px 0px;
+        padding: 80px 0px;
     }
     &.less-pad {
         padding: 60px 0
