--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -35,6 +35,10 @@ header {
 }
 
 .hero-centered {
+    padding-bottom: 120px;
+    @include media-breakpoint-up(md) {
+        padding-bottom: 100px;
+    }
     .underline{
         text-decoration: underline;
         text-decoration-color:  #95BE3F;
