--- a/assets/src/scss/icon_blocks.scss
+++ b/assets/src/scss/icon_blocks.scss
@@ -17,18 +17,22 @@
     
     .top-logos{
         position: relative;
-        margin: -90px 20px 0 20px;
+        // margin: -90px 20px 0 20px;
+        margin: -115px 20px 0 20px;
+
 
         @include media-breakpoint-up(md) {
-            margin: -138px 0 0 0;
+            // margin: -138px 0 0 0;
+            margin: -100px 0 0 0;
         }
         @include media-breakpoint-up(lg) {
-            margin: -185px 0 0 0;
+            // margin: -185px 0 0 0;
+            margin: -135px 0 0 0;
         }
         ul{
             padding: 20px 30px;
             @include media-breakpoint-up(md) {
-                padding: 30px 50px;
+                padding: 20px 30px;
             }
 
             list-style: none;
@@ -96,6 +100,6 @@
         }
     }
     .copy{
-        padding: 40px;
+        padding: 40px 0;
     }
 }
