--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -106,7 +106,7 @@ h1, .h1 {
 h2, .h2 {
     // font-size: 4.6rem;  //Laptop: 46px, Ipads: 41.4px, Mobiles: 36.8px
     padding-top: 3rem;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 3.5rem;
