Partners, two col text and image section, spacing

--- a/assets/src/scss/five-reasons.scss
+++ b/assets/src/scss/five-reasons.scss
@@ -1,4 +1,4 @@
-.five_reasons{
+.five-reasons{
     h2{
         color:  #fff;
     }
@@ -45,6 +45,11 @@
                 }
             }
 
+        }
+    }
+    .btn-section{
+        p{
+            color: #fff;
         }
     }
 }
