--- a/assets/src/scss/icon-blocks.scss
+++ b/assets/src/scss/icon-blocks.scss
@@ -79,7 +79,7 @@
         }
         .profile-wrapper{
             position: relative;
-            max-width: 345px;
+            max-width: 400px;
             .sig-wrap{
                 margin: -45px 20px 0 20px;
                 position: relative;
@@ -100,6 +100,6 @@
         }
     }
     .copy{
-        padding: 40px 0;
+        padding: 40px 0 0 0;
     }
 }
