--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -27,17 +27,16 @@
 @import 'flipclock-timer';
 @import 'product';
 @import 'popup';
-@import 'icon_blocks';
-@import 'consent_order_section';
-@import 'five_reasons';
-@import 'partners';
-@import 'img_text_section';
-@import 'text_img_section';
-@import 'four_step_section';
-@import 'guarantee_section';
-@import 'reviews_section';
-@import 'rapid_consent';
-@import 'footer_form';
+@import 'icon-blocks';
+@import 'consent-order-section';
+@import 'five-reasons';
+@import 'img-text-section';
+@import 'text-img-section';
+@import 'four-step-section';
+@import 'guarantee-section';
+@import 'reviews-section';
+@import 'rapid-consent';
+@import 'footer-form';
 
 
 // Additional Pages
