--- a/assets/src/scss/four-step-section.scss
+++ b/assets/src/scss/four-step-section.scss
@@ -1,3 +1,63 @@
 .four-step-section{
     
+    
+    .styled-list{
+        max-width: 700px;
+        li{
+            background: #F4F9EC;
+            border: 1px solid #95BE3F;
+            padding: 20px 10px 20px 10px;
+
+            @include media-breakpoint-up(md) {
+                padding: 33px 55px 33px 30px;
+            }
+            .icon{
+                padding-right: 10px;
+                padding-top: 10px;
+                max-width: 60px;
+                width: 100%;
+                @include media-breakpoint-up(sm) {
+                    padding-right: 20px;
+                    max-width: 70px;
+                    width: 100%;
+                }
+                svg{
+                    max-width: 100%;
+                }
+            }
+            .copy{
+                max-width: 500px;
+                .heading{
+                    font-size: 30px;
+                    font-family: 'Gilroy-Bold';
+                    font-weight: 700;
+                    line-height: 150%;
+                    color: #95BE3F;
+                    @include media-breakpoint-up(md) {
+                        font-size: 36px;
+                    }
+                }
+                .subhead{
+                    @include media-breakpoint-up(md) {
+                        font-size: 18px;
+                    }
+                    color: #192E50;
+                    font-family: 'Roboto';
+                    font-weight: 500;
+                    font-size: 20px;
+                    line-height: 150%;
+                }
+                .copy{
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 150%;
+                    color: #192E50;
+                }
+            }
+        }
+        li:nth-child(1) {
+            background-color: #fff;
+        }
+    }
+        
 }
