--- a/assets/src/scss/rapid-consent.scss
+++ b/assets/src/scss/rapid-consent.scss
@@ -1,3 +1,30 @@
 .rapid-consent{
-    
+    .eyebrow{
+        margin-top: 0;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: #95BE3F;
+    }
+    h2{
+        padding-top: 15px;
+        margin-bottom: 15px;
+    }
+    .subhead{
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 117.3%;
+        text-align: center;
+        letter-spacing: -0.04em;
+        color: #95BE3F;
+    }
+    .reviews{
+        padding-top: 22px;
+        max-width: 410px;
+        img{
+            padding: 0 20px;
+            max-width: 200px;
+        }
+    }
 }
