--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -68,7 +68,7 @@ header {
 
     // Got questions (if it exists)
     span {
-        font-family: 'Gilroy-Bold';
+        font-family: $secondary-heading;
         font-size: 16px;
         line-height: 19px;
         letter-spacing: 0.06em;
