--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -12,7 +12,7 @@
 
 
 @font-face {
-    font-family: 'Inter-Regular';
+    font-family: 'Inter';
     src: url('../fonts/Inter-Regular.woff2') format('woff2'),
     url('../fonts/Inter-Regular.woff') format('woff');
     font-weight: 400;
@@ -36,7 +36,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto-Bold';
+    font-family: 'Roboto';
     src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
     url('../fonts/Roboto-Bold.woff') format('woff');
     font-weight: 700;
@@ -45,6 +45,7 @@
 
 
 $headings-font: 'Inter', sans-serif;
+$secondary-heading: 'Gilroy-Bold', sans-serif; 
 $body-font: 'Roboto', sans-serif;
 
 // --------------------
@@ -73,7 +74,6 @@ p {
     font-style: normal;
     font-weight: 400;
     font-size: 1.6rem;
-    line-height: 175%;
     color: #192E50;
 }
 
@@ -89,16 +89,16 @@ h6, .h6 {
     font-family: $headings-font;
     font-weight: bold;
     text-transform: capitalize;
+    font-family: 'Roboto';
 }
 
 h1, .h1 {
     // font-size: 5rem;  //Laptop: 50px, Ipads: 45px, Mobiles: 40px
     color: #FFFFFF;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 3.2rem;
     @include media-breakpoint-up(md) {
-        font-size: 45px;
-        line-height: 117.3%;
+        font-size: 4.5rem;
         letter-spacing: -0.04em;
     }
 }
@@ -110,7 +110,6 @@ h2, .h2 {
     font-style: normal;
     font-weight: 700;
     font-size: 3.5rem;
-    line-height: 117.3%;
     letter-spacing: -0.04em;
     color: #192E50;
 
@@ -135,31 +134,25 @@ h2, .h2 {
 
 h3, .h3 {
     // font-size: 3rem;  //Laptop: 30px, Ipads: 27px, Mobiles: 24px
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 3.6rem;
-    line-height: 150%;
     color: #95BE3F;
 }
 
 h4, .h4 {
     // font-size: 2.4rem;  //Laptop: 24px, Ipads: 21.6px, Mobiles: 19.2px
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 1.8rem;
-    line-height: 150%;
     color: #95BE3F;
 }
 
 h5, .h5 {
     // font-size: 2rem;  //Laptop: 20px, Ipads: 18px, Mobiles: 16px
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 2rem;
-    line-height: 150%;
     color: #192E50;
 }
 
@@ -175,15 +168,14 @@ strong {
 .eyebrow {
     font-family: 'Roboto';
     font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 1.4rem;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #95BE3F;
     margin-top: 35px;
     @include media-breakpoint-up(md) {
         margin-top: 50px;
-        font-size: 18px;
+        font-size: 1.8rem;
     }
 }
 
@@ -191,6 +183,5 @@ strong {
     font-size: 2.2rem;
     font-weight: 400;
     font-size: 18px;
-    line-height: 176.5%;
     color: #FFFFFF;
 }
