--- a/assets/src/scss/rapid-consent.scss
+++ b/assets/src/scss/rapid-consent.scss
@@ -27,4 +27,15 @@
             max-width: 200px;
         }
     }
+    .content-wrapper{
+        padding-top: 3.2rem;
+        padding-bottom: 4.0rem;
+        ul ::marker{
+            color: #95BE3F;
+            width: 11px;
+        }
+        .form-img{
+            max-width: 372px;
+        }
+    }
 }
