--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -20,6 +20,14 @@
 }
 
 @font-face {
+    font-family: 'Inter';
+    src: url('../fonts/Inter-Bold.woff2') format('woff2'),
+    url('../fonts/Inter-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Medium.woff2') format('woff2'),
     url('../fonts/Roboto-Medium.woff') format('woff');
@@ -84,12 +92,13 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-    line-height: 1.3;
+    // line-height: 1.3;
     margin-bottom: 2rem;
     font-family: $headings-font;
     font-weight: bold;
     text-transform: capitalize;
     font-family: 'Roboto';
+    line-height: 117.3%;
 }
 
 h1, .h1 {
@@ -154,6 +163,7 @@ h5, .h5 {
     font-weight: 700;
     font-size: 2rem;
     color: #192E50;
+    line-height: 160%;
 }
 
 h6, .h6 {
