--- a/assets/src/scss/five-reasons.scss
+++ b/assets/src/scss/five-reasons.scss
@@ -48,6 +48,10 @@
         }
     }
     .btn-section{
+        padding-top: 0px;
+        @include media-breakpoint-up(md) {
+            padding-top: 20px;
+        }
         p{
             color: #fff;
         }
