--- a/assets/src/scss/icon-blocks.scss
+++ b/assets/src/scss/icon-blocks.scss
@@ -65,7 +65,7 @@
                 color: #192E50;
                 font-size: 15.0297px;
                 line-height: 18px;
-                
+                padding-right: 15px;
                 @include media-breakpoint-up(md) {
                     font-size: 18px;
                 }
