--- a/assets/src/scss/guarantee-section.scss
+++ b/assets/src/scss/guarantee-section.scss
@@ -3,4 +3,17 @@
     img{
         max-width: 261px;
     }
+    p{
+        max-width: 100%;
+        @include media-breakpoint-up(md) {
+            max-width: 57%;
+        }
+        text-align: center !important;
+    }
+    .btn-section {
+        padding-top: 15px;
+        @include media-breakpoint-up(md) {
+            padding-top: 40px;
+        }
+    }
 }
