--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -35,6 +35,12 @@ header {
 }
 
 .hero-centered {
+    h1{
+        margin: auto;
+        padding-bottom: 26px;
+        max-width: 870px;
+    }
+
     padding-bottom: 120px;
     @include media-breakpoint-up(md) {
         padding-bottom: 100px;
