--- a/assets/src/scss/five-reasons.scss
+++ b/assets/src/scss/five-reasons.scss
@@ -5,30 +5,30 @@
     .styled-list{
         li{
             background: #FFFFFF;
-            padding: 20px;
+            padding: 25px;
           
 
             .row{
                 padding: 0px;
             }
             .icon{
-                padding: 0;
-                padding-left: 10px;
-                @include media-breakpoint-up(md) {
-                    padding-left: 0px;
-                }
+                // padding: 0 10px;
+                // padding-left: 10px;
+                // @include media-breakpoint-up(md) {
+                //     padding-left: 0px;
+                // }
                 svg{
-                    max-width: 40px;
-                    @include media-breakpoint-up(md) {
-                        max-width: 60px;
-                    }
+                    max-width: 60px;
+                    // @include media-breakpoint-up(sm) {
+                    //     max-width: 60px;
+                    // }
                 }
             }
             .text{
                 padding: 0;
                 padding-right: 40px;
                 padding-left: 15px;
-                @include media-breakpoint-up(md) {
+                @include media-breakpoint-up(sm) {
                     padding-left: 0px;
                 }
                 .heading{
@@ -42,6 +42,8 @@
                     color: #192E50;
                     font-size: 16px;
                     line-height: 24px;
+                    margin-bottom: 0 !important;
+                
                 }
             }
 
