--- a/assets/src/scss/icon-blocks.scss
+++ b/assets/src/scss/icon-blocks.scss
@@ -79,7 +79,10 @@
         }
         .profile-wrapper{
             position: relative;
-            max-width: 400px;
+            max-width: 100%;
+            @include media-breakpoint-up(md) {
+                max-width: 400px;
+            }
             .sig-wrap{
                 margin: -45px 20px 0 20px;
                 position: relative;
