--- a/assets/src/scss/img-text-section.scss
+++ b/assets/src/scss/img-text-section.scss
@@ -1,6 +1,10 @@
 .img-text-section{
     background: #F9FAFB;
     .btn-section{
+        margin: auto;
+        @include media-breakpoint-up(md) {
+            margin: 0;
+        }
         padding-top: 35px;
         max-width: 412px;
     }
