--- a/assets/src/scss/reviews-section.scss
+++ b/assets/src/scss/reviews-section.scss
@@ -12,6 +12,12 @@
         @include media-breakpoint-up(sm) {
             width: 90px;
             top: 6px;
+            left: 16px;
+        }
+
+        @include media-breakpoint-up(md) {
+            width: 90px;
+            top: 6px;
             left: 45px;
         }
     }
@@ -42,6 +48,7 @@
                 }
                 .stars{
                     width: 125px;
+                    padding-bottom: 15px;
                 }
                 p{
                     font-size: 16px;
@@ -51,6 +58,7 @@
                 .title{
                     padding-top: 20px;
                     color: #95BE3F;
+                    font-weight: 700;
                 }
             }
         }
@@ -59,7 +67,7 @@
     .swiper-button-next, .swiper-button-prev{
         position: relative;
         margin: 0 20px;
-        svg{
+        img{
             @include media-breakpoint-up(md) {
                 min-width: 38px;
             }
