--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -81,7 +81,7 @@ p {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 1.6rem;
+    font-size: 16px;
     color: #192E50;
     line-height: 175%;
 }
@@ -107,6 +107,7 @@ h1, .h1 {
     color: #FFFFFF;
     font-weight: 700;
     font-size: 3.2rem;
+    font-family: 'Inter';    
     @include media-breakpoint-up(md) {
         font-size: 4.5rem;
         letter-spacing: -0.04em;
@@ -195,4 +196,5 @@ strong {
     font-weight: 400;
     font-size: 18px;
     color: #FFFFFF;
+    max-width: 690px;
 }
