--- a/assets/src/scss/four-step-section.scss
+++ b/assets/src/scss/four-step-section.scss
@@ -74,7 +74,7 @@
                 max-width: 500px;
                 .heading{
                     font-size: 30px;
-                    font-family: $secondary-heading;
+                    font-family: 'Roboto';
                     font-weight: 700;
                     line-height: 150%;
                     color: #95BE3F;
