--- a/assets/src/scss/form.scss
+++ b/assets/src/scss/form.scss
@@ -16,7 +16,7 @@ form {
         line-height: 1;
         line-height: 175%;
         color: #192E50;
-        transition: 0.3s;
+        // transition: 0.3s;
 
         @include media-breakpoint-up(md) {
             padding: 20px 15px 20px 80px;
