--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -44,7 +44,7 @@
 // Additional Pages
 // @import 'ebook-page';
 
-// @import 'thank-you-page';
+@import 'thank-you-page';
 
 // @import 'multi-step-form';
 // @import 'questionnaire-page';
