--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -17,7 +17,7 @@ $secondary      		: #333;
 $headerheight   		: 150px;  // Change to approximate header height - adds padding to first section
 $header-starting-width	: 280px;
 $header-scrolled-width	: 200px;
-$headerbg       		: #fff; // Header scrolled background color.
+$headerbg       		: rgba(25, 46, 80, 0.9); // Header scrolled background color.
 
 // Tables
 $bg-table-active-color 	: #42c7b3;
