--- a/assets/src/scss/icon-blocks.scss
+++ b/assets/src/scss/icon-blocks.scss
@@ -90,7 +90,7 @@
                 box-shadow: 0px 40px 50px rgba(0, 0, 0, 0.05);
             
                 img{
-                    padding: 5px 50px;
+                    padding: 5px;
                 }
 
             }
