--- a/assets/src/scss/footer-form.scss
+++ b/assets/src/scss/footer-form.scss
@@ -17,7 +17,7 @@
     .subheader{
         font-family: 'Roboto';
         font-weight: 700;
-        font-size: 1.8rem;
+        font-size: 18px;
         line-height: 175%;
         color: #95BE3F;
         padding-bottom: 30px;
