--- a/assets/src/scss/home.scss
+++ b/assets/src/scss/home.scss
@@ -5,3 +5,21 @@ section {
 .sharpen{
     image-rendering: -webkit-optimize-contrast;
 }
+.hero-reviews{
+    max-width: 280px;
+
+    @include media-breakpoint-up(sm) {
+        max-width: 410px;
+    }
+        img{
+        // max-width: 185px !important;
+        &.gl-fix{
+            padding: 5px;
+            // max-width: 200px !important;
+        }
+        &.fb-fix{
+            padding-top: 5px;
+            // max-width: 200px !important;
+        }
+    }
+}
