Social logo image edits

--- a/assets/src/scss/home.scss
+++ b/assets/src/scss/home.scss
@@ -9,10 +9,10 @@ section {
     max-width: 410px;
         img{
         &.gl-fix{
-            padding: 5px;
+            // padding: 5px;
         }
         &.fb-fix{
-            padding-top: 5px;
+            // padding-top: 5px;
         }
     }
 }
