--- a/assets/src/scss/button.scss
+++ b/assets/src/scss/button.scss
@@ -35,8 +35,13 @@ input[type=button] {
 }
 
 .btn-section {
+    
     p {
-        width: 90%;
+        font-size: 14px;
+        @include media-breakpoint-up(md) {
+            font-size: 16px;
+        }
+        // width: 90%;
         margin: 0 auto;
         line-height: 130%;
     }
