--- a/assets/src/scss/five-reasons.scss
+++ b/assets/src/scss/five-reasons.scss
@@ -54,8 +54,12 @@
         @include media-breakpoint-up(md) {
             padding-top: 20px;
         }
-        p{
+        p {
+            font-size: 14px;
             color: #fff;
+            @include media-breakpoint-up(md) {
+                font-size: 16px;
+            }
         }
     }
 }
