--- a/assets/src/scss/guarantee-section.scss
+++ b/assets/src/scss/guarantee-section.scss
@@ -15,5 +15,11 @@
         @include media-breakpoint-up(md) {
             padding-top: 40px;
         }
+        p {
+            font-size: 14px;
+            @include media-breakpoint-up(md) {
+                font-size: 16px;
+            }
+        }
     }
 }
