--- a/assets/src/scss/form.scss
+++ b/assets/src/scss/form.scss
@@ -11,13 +11,13 @@ form {
         border: 1.5px solid rgba(226, 226, 226, 0.35);
         background: #FFFFFF;
         width: 100%;
-        padding: 20px 15px 20px 65px;
         margin-bottom: 15px;
         line-height: 1;
         line-height: 175%;
         color: #192E50;
         // transition: 0.3s;
-
+        
+        padding: 20px 15px 20px 65px;
         @include media-breakpoint-up(md) {
             padding: 20px 15px 20px 80px;
         }
@@ -33,12 +33,25 @@ form {
         &:focus, input:focus{
             outline: none;
         }
+        &.arrangement{
+            padding: 15px 15px 45px 65px;
+            @include media-breakpoint-up(md) {
+                padding: 20px 15px 20px 80px;
+            }
+        }
+        &.settlement{
+            padding: 15px 15px 65px 65px;
+            @include media-breakpoint-up(md) {
+                padding: 20px 15px 20px 80px;
+            }
+        }
+
     }
     input::placeholder , textarea::placeholder {
         color: #192E50 !important;
         opacity: 1 !important;
         font-size: 16px;
-        // white-space: normal; 
+        white-space: normal; 
 
       }
 
