--- a/assets/src/scss/rapid-consent.scss
+++ b/assets/src/scss/rapid-consent.scss
@@ -30,6 +30,9 @@
     .content-wrapper{
         padding-top: 3.2rem;
         padding-bottom: 4.0rem;
+        li{
+            color: #192E50;
+        }
         ul ::marker{
             color: #95BE3F;
             width: 15px !important;
@@ -55,5 +58,8 @@
             font-size: 18px;
             line-height: 180%;
         }
+    }
+    .body-social-reviews{
+        max-width: 409px;
     }
 }
